--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-last-buccaneer-b-Or-The-trustees-of-Mrs-A_74835
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74835-h/images/coversmall.jpg
 creator:
   author:
     agent_name: Cornford, L. Cope (Leslie Cope)
@@ -11,6 +14,8 @@ creator:
     gutenberg_agent_id: '57237'
     url: http://www.gutenberg.org/2009/agents/57237
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74835#The-last-buccaneer-b-Or-The-trustees-of-Mrs-A
 gutenberg_issued: '2024-12-04'
 gutenberg_type: Text
 identifiers:
